fix tldraw css, layout overflow

--- a/src/app/tldraw/style.css
+++ b/src/app/tldraw/style.css
@@ -1,3 +1,6 @@
+body {
+  @apply overflow-hidden;
+}
 .z-50 {
-  z-index: 100000;
+  @apply z-[100000];
 }
